kubernetes/apps/default/proxmox/app/endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: proxmox
subsets:
- addresses:
  - ip: ${SECRET_PROXMOX_IP}
  ports:
  - name: https
    port: 8006
    protocol: TCP
