kubernetes/apps/default/proxmox/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: proxmox
spec:
  clusterIP: None
  clusterIPs:
  - None
  ipFamilies:
  - IPv4
  - IPv6
  ipFamilyPolicy: PreferDualStack
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 8006
  - name: websocket
    port: 5900
    protocol: TCP
    targetPort: 5900
  - name: spice
    port: 3128
    protocol: TCP
    targetPort: 3128
  sessionAffinity: None
  type: ClusterIP
